JVM tweaks for production